// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Menu Disabled Menu 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #28283e;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-3:hover:not(:disabled) {
  background-color: #232336;
}

.emotion-3:active:not(:disabled) {
  background-color: #1e1e2e;
}

.emotion-3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-6 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: white;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  TC
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with avatar and different button colour 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #28283e;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-3:hover:not(:disabled) {
  background-color: #232336;
}

.emotion-3:active:not(:disabled) {
  background-color: #1e1e2e;
}

.emotion-3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-6 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: white;
}

.emotion-26 {
  fill: black;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-26 path {
  fill: black;
}

.emotion-32 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #e7ebf2;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-32:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-32:hover:not(:disabled) {
  background-color: #dbe1eb;
}

.emotion-32:active:not(:disabled) {
  background-color: #cfd7e5;
}

.emotion-32:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-32:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-35 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #1DE9B6;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-35 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-41 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-41 path {
  fill: black;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  TC
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <img
                    src="https://mui.com/static/images/avatar/1.jpg"
                  />
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-26"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-32"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-35"
                >
                  
                  <span
                    className="emotion-9"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-26"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-7"
              >
                <span>
                  Tom Cruise
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-41"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with option icon and different colour 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
}

.emotion-3 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #28283e;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-3:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-3:hover:not(:disabled) {
  background-color: #232336;
}

.emotion-3:active:not(:disabled) {
  background-color: #1e1e2e;
}

.emotion-3:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 100%;
  border: 0.0625rem solid #e7ebf2;
  box-sizing: border-box;
  background: #6c7c98;
  overflow: hidden;
  position: relative;
  font-size: 0.625rem;
  font-weight: 500;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 1;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: black;
}

.emotion-6 img {
  border-radius: 100%;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: black;
  width: 0.75rem;
  height: 0.75rem;
}

.emotion-8 path {
  fill: black;
}

.emotion-9 {
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.emotion-12 {
  fill: white;
  width: 1rem;
  height: 1rem;
}

.emotion-12 path {
  fill: white;
}

.emotion-14 {
  font-size: 1rem;
  font-weight: 500;
  color: black;
  background-color: #d6d6db;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-14:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-14:hover:not(:disabled) {
  background-color: #c1c1c9;
}

.emotion-14:active:not(:disabled) {
  background-color: #adadb8;
}

.emotion-14:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-14:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-23 {
  fill: black;
  width: 1rem;
  height: 1rem;
}

.emotion-23 path {
  fill: black;
}

.emotion-25 {
  font-size: 1rem;
  font-weight: 500;
  color: #28283e;
  background-color: transparent;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: solid 0.0625rem #28283e;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-25:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.125rem;
}

.emotion-25:hover:not(:disabled) {
  background-color: #eaeaed;
}

.emotion-25:active:not(:disabled) {
  background-color: #d6d6db;
}

.emotion-25:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-25:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-34 {
  fill: #28283e;
  width: 1rem;
  height: 1rem;
}

.emotion-34 path {
  fill: #28283e;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-9"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-12"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-14"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-9"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-23"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-25"
            data-testid="button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  
                  <span
                    className="emotion-7"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-8"
                    />
                  </span>
                  
                </div>
              </span>
              <span
                className="emotion-9"
              >
                <span>
                  More
                </span>
              </span>
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-7"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-34"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Menu Menu with selection handler 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  font-size: 1rem;
  font-weight: 500;
  color: white;
  background-color: #175BF5;
  padding: 0.5rem 1rem;
  height: 2.875rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-2:focus-visible:not(:disabled) {
  outline: #C813D5 auto 0.0625rem;
}

.emotion-2:hover:not(:disabled) {
  background-color: #1451dc;
}

.emotion-2:active:not(:disabled) {
  background-color: #1248c4;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:disabled style {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  margin-left: 0;
  margin-right: 0;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div>
      Selected: 
      <b>
        -
      </b>
    </div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span>
                More
              </span>
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
